kubernetes-ingress-controller/Resources/deployment-definition.yml
#deployment-definition.yml
#football-service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: football-service
  namespace: ingress-namespace
  labels:
    app: football-service
    type: ingress-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
     app: football-service
     type: ingress-deployment
  template:
    metadata:
      labels:
        app: football-service
        type: ingress-deployment
    spec:
     containers:
     - name: nginx
       image: nginx:latest
       ports:
       - containerPort: 8080
         name: football-svc
       volumeMounts:
        - mountPath: /etc/nginx/
          name: data-volume
     volumes:
      - name: data-volume
        configMap:
         name: ingress-configmap
         items:
          - key: nginx.conf
            path: nginx.conf
---
#deployment-definition.yml
#boot-service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boot-service
  namespace: ingress-namespace
  labels:
    app: boot-service
    type: ingress-deployment2
spec:
  replicas: 1
  selector:
    matchLabels:
     app: boot-service
     type: ingress-deployment2
  template:
    metadata:
      labels:
        app: boot-service
        type: ingress-deployment2
    spec:
     containers:
     - name: nginx
       image: nginx:latest
       ports:
       - containerPort: 8080
         name: boot-svc
       volumeMounts:
        - mountPath: /etc/nginx/
          name: data-volume-2
     volumes:
      - name: data-volume-2
        configMap:
         name: ingress-configmap2
         items:
          - key: nginx.conf
            path: nginx.conf
