kubernetes-ingress-controller/Resources/service-definition.yml
#service-definition.yml
#football-service
apiVersion: v1
kind: Service
metadata:
  name: football-service
  namespace: ingress-namespace
spec:
    type: NodePort
    ports:
    - port: 8080
      targetPort: football-svc
      protocol: TCP
      nodePort: 30080
    selector:
      app: football-service
      type: ingress-deployment
---
#boot-service
apiVersion: v1
kind: Service
metadata:
  name: boot-service
  namespace: ingress-namespace
spec:
    type: NodePort
    ports:
    - port: 8080
      targetPort: boot-svc
      protocol: TCP
      nodePort: 30081
    selector:
      app: boot-service
      type: ingress-deployment2
